updated readme with examples

--- a/simulate/Makefile
+++ b/simulate/Makefile
@@ -1,8 +1,6 @@
 
-BOOST_LIB = /Users/reinhardheckel/include/boost_1_55_0/stage/lib
-
 texttodna: texttodna.cpp
-	g++ -O3 texttodna.cpp -o texttodna -std=c++11 -lboost_program_options -L$(BOOST_LIB)
+	g++ -O3 texttodna.cpp -o texttodna -std=c++11 -lboost_program_options
 	#g++ -O3 texttodna.cpp -o texttodna -std=c++11 -lboost_program_options -L/Users/reinhardheckel/include/boost_1_55_0/stage/lib
 
 tests: test1
